# OpenSyncParty

./: .gitignore  AUDIT.md  AUDIT_AND_PLAN.md  AUDIT_ISSUES.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
clients/web/: README.md  overlay.js
clients/web-overlay/: README.md  overlay.js
clients/web-plugin/: manifest.json  opensyncparty.js  osp-playback.js  osp-state.js  osp-ui.js  osp-utils.js  osp-ws.js  owp-app.js  owp-playback.js  owp-state.js  owp-ui.js  owp-utils.js  owp-ws.js  plugin.js
docs/: README.md  architecture.md  development.md  protocol.md  roadmap.md  user-guide.md
docs/development/: contributing.md  release.md  setup.md  testing.md
docs/operations/: installation.md
docs/technical/: client.md  server.md  sync-algorithms.md
infra/docker/: README.md  docker-compose.yml
infra/docker/config/data/: jellyfin.db
plugins/: README.md
plugins/jellyfin/: README.md
plugins/jellyfin/OpenSyncParty/: OpenSyncPartyPlugin.csproj  Plugin.cs  nuget.config
plugins/jellyfin/OpenSyncParty/Configuration/: PluginConfiguration.cs
plugins/jellyfin/OpenSyncParty/Models/: Models.cs
plugins/jellyfin/OpenWatchParty/: OpenWatchPartyPlugin.csproj  Plugin.cs
scripts/: README.md  build-jellyfin-plugin.sh  serve-demo.sh  sync-jellyfin-refs.sh
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  room.rs  utils.rs  ws.rs
session-server/: README.md  app.py  room_manager.py
session-server-rust/: Cargo.toml
session-server-rust/src/: auth.rs  main.rs  types.rs  ws.rs
tests/: README.md  protocol_harness.py  test_server_auth.py
(+7 files in other folders)
